--- a/index.html
+++ b/index.html
@@ -395,11 +395,11 @@
     }
 
     function startFallingAll() {
-      const images = ["co4la.png", "ngoisao.png", "traitim.png"];
+      const images = ["co4laa.png", "ngoisao.png", "traitim.png"];
       setInterval(() => {
         const imgSrc = images[Math.floor(Math.random() * images.length)];
         createFallingItem(imgSrc);
-      }, 250);
+      }, 400);
     }
     openLetterBtn.addEventListener("click", () => {
     mainScreen.classList.add("fade-out");
