--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     <img id="bird" src="bocauduathu.gif" alt="Chim bồ câu" />
     <div id="message">Thảo ơi! cậu có thư này💌</div>
   </div>
-  <div id="noteBox">Hi,sorry anh viết chữ xấu lắm ráng đọc nha :< À click vào icon rơi xuống có bất ngờ nữa á !</div>
+  <div id="noteBox">Hi,sorry anh viết chữ xấu lắm ráng đọc nha :<  À, click vào những icon rơi xuống có bất ngờ nữa á !</div>
 
   <audio id="flapSound" src="dapcanh.mp3"></audio>
   <audio id="bellSound" src="tiengchuong.mp3"></audio>
