--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
         if (src.includes("ngoisao")) {
           options = [
-            "✨ Chúc em luôn tỏa sáng như những ngôi sao ✨",
+            "✨ Chúc em luôn tỏa sáng lấp lánh như những ngôi sao ✨",
             "🌟 Bạn không cần hoàn hảo, chỉ cần tỏa sáng đúng lúc.",
             "🌟 Gửi bạn một ngôi sao nhỏ, hy vọng bạn thấy ấm áp hơn hôm nay",
             "🌟 Trên bầu trời đêm, luôn có một vì sao dành riêng cho bạn."
