--- a/index.html
+++ b/index.html
@@ -429,9 +429,9 @@
 
         if (src.includes("ngoisao")) {
           options = [
-            "✨ Chúc em luôn tỏa sáng lấp lánh như những ngôi sao ✨",
+            "✨ Chúc bạn luôn tỏa sáng lấp lánh như những ngôi sao ✨",
             "🌟 Bạn không cần hoàn hảo, chỉ cần tỏa sáng đúng lúc.",
-            "🌟 Gửi bạn một ngôi sao nhỏ, hy vọng bạn thấy ấm áp hơn hôm nay",
+            "🌟 Gửi em một ngôi sao nhỏ, hy vọng bạn thấy ấm áp hơn hôm nay",
             "🌟 Trên bầu trời đêm, luôn có một vì sao dành riêng cho bạn."
           ];
         } else if (src.includes("co4laa")) {
@@ -446,7 +446,7 @@
           options = [
             "❤️ Gửi em một ngàn yêu thươngg ><",
             "❤️ Chúc bạn một ngày tốt lành, không vì điều gì to lớn, chỉ vì bạn xứng đáng.",
-            "❤️ Chỉ cần em cười tươi, là đủ rồi.",
+            "❤️ Chỉ cần bạn cười tươi, là đủ rồi.",
             "❤️ Gửi bạn một trái tim nhỏ - mong bạn luôn cảm thấy ấm áp và bình yên."
           ];
         }
