--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
           options = [
             "🍀 Gửi em một nhành cỏ bốn lá – chúc em thật nhiều may mắn!",
             "🍀 Mỗi chiếc lá đều ý nghĩa: niềm tin – hy vọng – tình yêu – may mắn. Chúc em có đủ cả!",
-            "🍀 Giữa bao nhiêu chiếc lá bình thường, bạn là chiếc lá đặc biệt thứ tư.",
+            "🍀 Cỏ 4 lá rất hiếm. Giống như bạn vậy đó ^.^",
             "🍀 Có thể hôm nay bạn không thấy may mắn, nhưng chính bạn lại là “cỏ bốn lá” trong mắt tui đó",
             "🍀 Chúc em những điều tốt lành nhất"
           ];
