--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             "✨ Chúc bạn luôn tỏa sáng lấp lánh như những vì sao ✨",
             "🌟 Bạn không cần hoàn hảo, chỉ cần tỏa sáng đúng lúc.",
             "🌟 Gửi em một ngôi sao nhỏ, hy vọng bạn thấy ấm áp hơn hôm nay",
-            "🌟 Trên bầu trời đêm, luôn có một vì sao dành riêng cho bạn."
+            "🌟 Trên bầu trời đêm, luôn có một vì sao sáng dành riêng cho bạn."
           ];
         } else if (src.includes("co4laa")) {
           options = [
