--- a/index.html
+++ b/index.html
@@ -439,15 +439,15 @@
             "🍀 Gửi em một nhành cỏ bốn lá – chúc em thật nhiều may mắn!",
             "🍀 Mỗi chiếc lá đều ý nghĩa: niềm tin – hy vọng – tình yêu – may mắn. Chúc em có đủ cả!",
             "🍀 Cỏ 4 lá rất hiếm. Giống như bạn vậy đó ^.^",
-            "🍀 Có thể hôm nay bạn không thấy may mắn, nhưng chính bạn lại là “cỏ bốn lá” trong mắt tui đó",
-            "🍀 Chúc em những điều tốt lành nhất"
+            "🍀 Có thể hôm nay bạn không thấy may mắn, nhưng chính bạn lại là “cỏ bốn lá” trong mắt tui đó >.<",
+            "🍀 Chúc em những điều tốt lành nhất >.<"
           ];
         } else if (src.includes("traitim")) {
           options = [
             "❤️ Gửi em một ngàn yêu thươngg ><",
-            "❤️ Chúc bạn một ngày tốt lành, không vì điều gì to lớn, chỉ vì bạn xứng đáng.",
-            "❤️ Chỉ cần bạn cười tươi, là đủ rồi.",
-            "❤️ Gửi bạn một trái tim nhỏ - mong bạn luôn cảm thấy ấm áp và bình yên."
+            "❤️ Chúc bạn một ngày tốt lành, không vì điều gì to lớn, chỉ vì bạn xứng đáng :<",
+            "❤️ Chỉ cần bạn cười tươi, là đủ rồi ^^",
+            "❤️ Gửi bạn một trái tim nhỏ, mong bạn luôn cảm thấy ấm áp và bình yên."
           ];
         }
 
