--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     const letterCover = document.getElementById("letterCover");
     const letterContent = document.getElementById("letterContent");
     const goodSound = document.getElementById("goodSound");
-
+    let lastMessages = [];
     let moveCount = 0;
     const maxMoves = 30;
     let currentX = window.innerWidth - 170;
@@ -420,51 +420,50 @@
       item.style.left = `${Math.random() * window.innerWidth}px`;
       item.style.animationDuration = `${durationMin + Math.random() * (durationMax - durationMin)}s`;
 
-            // Gắn sự kiện click
-      let lastMessages = []; // 🌟 Lưu 3 câu chúc gần nhất
 
-      item.addEventListener("click", () => {
-        let message = "";
-        let options = [];
 
-        if (src.includes("ngoisao")) {
-          options = [
-            "✨ Chúc bạn luôn tỏa sáng lấp lánh như những vì sao ✨",
-            "🌟 Bạn không cần hoàn hảo, chỉ cần tỏa sáng đúng lúc.",
-            "🌟 Gửi em một ngôi sao nhỏ, hy vọng bạn thấy ấm áp hơn hôm nay",
-            "🌟 Trên bầu trời đêm, luôn có một vì sao sáng dành riêng cho bạn."
-          ];
-        } else if (src.includes("co4laa")) {
-          options = [
-            "🍀 Gửi em một nhành cỏ bốn lá – chúc em thật nhiều may mắn!",
-            "🍀 Mỗi chiếc lá đều ý nghĩa: niềm tin – hy vọng – tình yêu – may mắn. Chúc em có đủ cả!",
-            "🍀 Cỏ 4 lá rất hiếm. Giống như bạn vậy đó ^.^",
-            "🍀 Có thể hôm nay bạn không thấy may mắn, nhưng chính bạn lại là “cỏ bốn lá” trong mắt tui đó >.<",
-            "🍀 Chúc em những điều tốt lành nhất >.<"
-          ];
-        } else if (src.includes("traitim")) {
-          options = [
-            "❤️ Gửi em một ngàn yêu thươngg ><",
-            "❤️ Chúc bạn một ngày tốt lành, không vì điều gì to lớn, chỉ vì bạn xứng đáng :<",
-            "❤️ Chỉ cần bạn cười tươi, là đủ rồi ^^",
-            "❤️ Gửi bạn một trái tim nhỏ, mong bạn luôn cảm thấy ấm áp và bình yên."
-          ];
-        }
+    item.addEventListener("click", () => {
+      let message = "";
+      let options = [];
 
-        // ❌ Loại bỏ 3 câu gần nhất khỏi danh sách
-        const filtered = options.filter(opt => !lastMessages.includes(opt));
-        const listToUse = filtered.length > 0 ? filtered : options;
+      if (src.includes("ngoisao")) {
+        options = [
+          "✨ Chúc bạn luôn tỏa sáng lấp lánh như những vì sao ✨",
+          "🌟 Bạn không cần hoàn hảo, chỉ cần tỏa sáng đúng lúc.",
+          "🌟 Gửi em một ngôi sao nhỏ, hy vọng bạn thấy ấm áp hơn hôm nay",
+          "🌟 Trên bầu trời đêm, luôn có một vì sao sáng dành riêng cho bạn."
+        ];
+      } else if (src.includes("co4laa")) {
+        options = [
+          "🍀 Gửi em một nhành cỏ bốn lá – chúc em thật nhiều may mắn!",
+          "🍀 Mỗi chiếc lá đều ý nghĩa: niềm tin – hy vọng – tình yêu – may mắn. Chúc em có đủ cả!",
+          "🍀 Cỏ 4 lá rất hiếm. Giống như bạn vậy đó ^.^",
+          "🍀 Có thể hôm nay bạn không thấy may mắn, nhưng chính bạn lại là “cỏ bốn lá” trong mắt tui đó >.<",
+          "🍀 Chúc em những điều tốt lành nhất >.<"
+        ];
+      } else if (src.includes("traitim")) {
+        options = [
+          "❤️ Gửi em một ngàn yêu thươngg ><",
+          "❤️ Chúc bạn một ngày tốt lành, không vì điều gì to lớn, chỉ vì bạn xứng đáng :<",
+          "❤️ Chỉ cần bạn cười tươi, là đủ rồi ^^",
+          "❤️ Gửi bạn một trái tim nhỏ, mong bạn luôn cảm thấy ấm áp và bình yên."
+        ];
+      }
 
-        // 🎲 Chọn ngẫu nhiên
-        message = listToUse[Math.floor(Math.random() * listToUse.length)];
+      // ❌ Loại bỏ 3 câu gần nhất khỏi danh sách
+      const filtered = options.filter(opt => !lastMessages.includes(opt));
+      const listToUse = filtered.length > 0 ? filtered : options;
 
-        // ✅ Cập nhật hàng đợi lastMessages
-        lastMessages.push(message);
-        if (lastMessages.length > 3) lastMessages.shift();
+      // 🎲 Chọn ngẫu nhiên
+      message = listToUse[Math.floor(Math.random() * listToUse.length)];
 
-        showWish(message);
-        item.remove();
-      });
+      // ✅ Cập nhật hàng đợi lastMessages
+      lastMessages.push(message);
+      if (lastMessages.length > 3) lastMessages.shift();
+
+      showWish(message);
+      item.remove();
+    });
 
       document.body.appendChild(item);
       setTimeout(() => item.remove(), 8000);
