--- a/index.html
+++ b/index.html
@@ -430,7 +430,8 @@
         options = [
           "✨ Chúc bạn luôn tỏa sáng lấp lánh như những vì sao ✨",
           "🌟 Bạn không cần hoàn hảo, chỉ cần tỏa sáng đúng lúc.",
-          "🌟 Gửi bạn một ngôi sao nhỏ, hy vọng bạn thấy ấm áp hơn hôm nay",
+          "🌟 Gửi bạn một ngôi sao nhỏ, hy vọng bạn thấy ấm áp hơn !",
+          "🌟 Gửi bạn một ngôi sao may mắn nè ✨.",
           "🌟 Trên bầu trời đêm, luôn có một vì sao sáng dành riêng cho bạn."
         ];
       } else if (src.includes("co4laa")) {
@@ -445,7 +446,7 @@
         options = [
           "❤️ Gửi em một ngàn yêu thươngg ><",
           "❤️ Chúc bạn một ngày tốt lành, không vì điều gì to lớn, chỉ vì bạn xứng đáng :<",
-          "❤️ Chỉ cần mỗi ngày bạn cười tươi, là đủ rồi ^^",
+          "❤️ Chỉ cần mỗi ngày bạn cười tươi, thế là đủ rồi ^^",
           "❤️ Gửi bạn một trái tim nhỏ, mong bạn luôn cảm thấy ấm áp và bình yên <3"
         ];
       }
